// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeRepo createTree Should create a tree 1`] = `"INSERT @value0 IN @@value1 RETURN NEW"`;

exports[`TreeRepo createTree Should create a tree 2`] = `
Object {
  "@value1": "core_trees",
  "value0": Object {
    "_key": "test_tree",
    "label": Object {
      "en": "test",
      "fr": "test",
    },
    "libraries": Array [
      "test_lib",
      "test_lib2",
    ],
    "system": false,
  },
}
`;

exports[`TreeRepo deleteTree Should delete tree 1`] = `"REMOVE @value0 IN @@value1 RETURN OLD"`;

exports[`TreeRepo deleteTree Should delete tree 2`] = `
Object {
  "@value1": "core_trees",
  "value0": Object {
    "_key": "test_tree",
  },
}
`;

exports[`TreeRepo getTrees Should filter trees 1`] = `"FOR l IN core_trees FILTER l.@filterKey0 == @filterValue0 FILTER l.@filterKey1 == @filterValue1 RETURN l"`;

exports[`TreeRepo getTrees Should filter trees 2`] = `
Object {
  "filterKey0": "_key",
  "filterKey1": "system",
  "filterValue0": "test",
  "filterValue1": "false",
}
`;

exports[`TreeRepo getTrees Should return all trees 1`] = `"FOR l IN core_trees RETURN l"`;

exports[`TreeRepo getTrees Should return all trees 2`] = `Object {}`;

exports[`TreeRepo updateTree Should update a tree 1`] = `"UPDATE @value0 IN @@value1 RETURN NEW"`;

exports[`TreeRepo updateTree Should update a tree 2`] = `
Object {
  "@value1": "core_trees",
  "value0": Object {
    "_key": "test_tree",
    "label": Object {
      "en": "test",
      "fr": "test",
    },
    "libraries": Array [
      "test_lib",
      "test_lib2",
    ],
    "system": false,
  },
}
`;
